--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -49,13 +49,21 @@
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Salary</label>
-              <input
+              <label class="form-label">Parent department</label>
+              <select id="deptId" class="form-select">
+                <option selected>Select department</option>
+                @for (item of parentDeptList; track $index) {
+                <option [value]="item.departmentId">
+                  {{ item.departmentName }}
+                </option>
+                }
+              </select>
+              <!-- <input
                 type="number"
                 class="form-control"
                 [(ngModel)]="newEmployee.deptId"
                 name="deptId"
-              />
+              /> -->
             </div>
 
             <div class="mb-3">
