--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -5,7 +5,7 @@
       style="background-color: #39a6a3"
     >
       <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="#">Coding Yaar</a>
+        <a class="navbar-brand fw-bold" href="#">Employee App</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -30,7 +30,15 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/employees">Employees</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/project">Project</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/project-employees"
+                >Project Employees</a
+              >
+            </li>
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -51,12 +59,12 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
-            </li>
-            <li class="nav-item">
+            </li> -->
+            <!-- <li class="nav-item">
               <a class="nav-link">Link</a>
-            </li>
+            </li> -->
           </ul>
-          <form class="d-flex">
+          <!-- <form class="d-flex">
             <input
               class="form-control me-2"
               type="search"
@@ -64,7 +72,7 @@
               aria-label="Search"
             />
             <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
