--- a/src/app/pages/project/project.component.html
+++ b/src/app/pages/project/project.component.html
@@ -1,1 +1,112 @@
-<p>project works!</p>
+<main>
+  <div class="card bg-base-100 image-full w-96 shadow-sm">
+    <figure>
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+        alt="Shoes"
+      />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">Card Title</h2>
+      <p>
+        A card component has a figure, a body part, and inside body there are
+        title and actions parts
+      </p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary">Buy Now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 w-96 shadow-sm">
+    <figure class="px-10 pt-10">
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+        alt="Shoes"
+        class="rounded-xl"
+      />
+    </figure>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Card Title</h2>
+      <p>
+        A card component has a figure, a body part, and inside body there are
+        title and actions parts
+      </p>
+      <div class="card-actions">
+        <button class="btn btn-primary">Buy Now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 w-96 shadow-sm">
+    <div class="card-body">
+      <h2 class="card-title">Card Title</h2>
+      <p>
+        A card component has a figure, a body part, and inside body there are
+        title and actions parts
+      </p>
+    </div>
+    <figure>
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+        alt="Shoes"
+      />
+    </figure>
+  </div>
+
+  <div class="card bg-base-100 w-96 shadow-sm">
+    <figure>
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+        alt="Shoes"
+      />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">
+        Card Title
+        <div class="badge badge-secondary">NEW</div>
+      </h2>
+      <p>
+        A card component has a figure, a body part, and inside body there are
+        title and actions parts
+      </p>
+      <div class="card-actions justify-end">
+        <div class="badge badge-outline">Fashion</div>
+        <div class="badge badge-outline">Products</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 w-96 shadow-sm">
+    <figure>
+      <img
+        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+        alt="Shoes"
+      />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">Card Title</h2>
+      <p>
+        A card component has a figure, a body part, and inside body there are
+        title and actions parts
+      </p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary">Buy Now</button>
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="divide-y divide-gray-200 overflow-hidden rounded-lg bg-white shadow-sm"
+  >
+    <div class="px-4 py-5 sm:px-6">
+      content
+      <!-- Content goes here -->
+      <!-- We use less vertical padding on card headers on desktop than on body sections -->
+    </div>
+    <div class="px-4 py-5 sm:p-6">
+      <!-- Content goes here -->
+      content
+    </div>
+  </div>
+</main>
